--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,11 +8,13 @@ pipeline {
     stages {
         stage('Build') {
             steps {
+               
                 sh 'npm install'
             }
         }
         stage('Test') {
             steps {
+                sh "chmod +x -R ${env.WORKSPACE}"
                 sh './jenkins/test.sh'
             }
         }
